--- a/package.json
+++ b/package.json
@@ -1,1 +1,26 @@
-{"type":"module","name":"back","version":"1.0.0","main":"app.js","scripts":{"dev":"nodemon app.js"},"keywords":[],"author":"","license":"ISC","description":"","dependencies":{"cors":"^2.8.5","dotenv":"^16.4.5","express":"^4.19.2","mysql2":"^3.10.0"},"devDependencies":{"nodemon":"^3.1.3","standard":"^17.1.0"},"eslintConfig":{"extends":"./node_modules/standard/eslintrc.json"}}
+{
+    "type": "module",
+    "name": "back",
+    "version": "1.0.0",
+    "main": "src/index.js",
+    "scripts": {
+        "dev": "nodemon src/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mysql2": "^3.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.3",
+        "standard": "^17.1.0"
+    },
+    "eslintConfig": {
+        "extends": "./node_modules/standard/eslintrc.json"
+    }
+}
